# static-site-generator

./: .gitignore  README.md  main.sh  pyproject.toml
src/bddssg/: blocks.py  convert.py  generate.py  htmlnode.py  inline.py  leafnode.py  main.py  parentnode.py  static.py  textnode.py
tests/: test_blocks.py  test_convert.py  test_generate.py  test_htmlnode.py  test_inline.py  test_leafnode.py  test_parentnode.py  test_static.py  test_textnode.py
